adjust button height to match input boxes

--- a/heron_wsgi/templates/build_team.html
+++ b/heron_wsgi/templates/build_team.html
@@ -102,18 +102,18 @@
       <p>Look someone up by giving the first letters of their first name, last name, or KUMC id:
       <p>
         <div style="display:flex; flex-direction: row; justify-content: left; align-items: left">
-          <label style="padding-right:10px;">First:</label>
-          <input style="border-radius: 2px; width:20%; height:30px; margin-right:10px;" name='givenname' />
-          <label style="padding-right:10px;">Last:</label>
-          <input style="border-radius: 2px; width:20%; height:30px; margin-right:10px;" name='sn' />
-          <label style="padding-right:10px;">ID:</label>
-          <input style="border-radius: 2px; width:10%; height:30px; margin-right:10px" name='cn' />
-          <input class="button button-blue btn mt-6" type="submit" name='goal' value="Search" />
+          <label style="padding-right:6px;">First:</label>
+          <input style="border-radius: 2px; width:20%; height:30px; margin-right:6px;" name='givenname' />
+          <label style="padding-right:6px;">Last:</label>
+          <input style="border-radius: 2px; width:20%; height:30px; margin-right:6px;" name='sn' />
+          <label style="padding-right:6px;">ID:</label>
+          <input style="border-radius: 2px; width:10%; height:30px; margin-right:6px" name='cn' />
+          <input class="button button-blue btn mt-6" style="height:30px" type="submit" name='goal' value="Search" />
         </div>
       </p>
         <div style="display:flex; flex-direction: row; justify-content: left; align-items: left">
-          <input style="border-radius: 2px; width:20%; height:30px; margin-right:10px;" type="hidden" name="uids" value="${uids}" />
-          <input py:if="investigator" style="border-radius: 2px; width:20%; height:30px; margin-right:10px;" type="hidden" name="investigator" value="${investigator.cn}" />
+          <input style="border-radius: 2px; width:20%; height:30px; margin-right:6px;" type="hidden" name="uids" value="${uids}" />
+          <input py:if="investigator" style="border-radius: 2px; width:20%; height:30px; margin-right:6px;" type="hidden" name="investigator" value="${investigator.cn}" />
         </div>
       </p>
     </form>
@@ -124,10 +124,10 @@
       </div>
       <p>Look up IRB protocol study team members:</p>
         <div style="display:flex; flex-direction: row; justify-content: left; align-items: left">
-          <label style="padding-right:10px;">Study ID:</label>
-          <input style="border-radius: 2px; width:10%; height:30px; margin-right:10px" name='studyId' />
-          <input style="border-radius: 2px; width:20%; height:30px; margin-right:10px;" type="hidden" name="uids" value="${uids}" />
-          <input class="button button-blue btn mt-6" type="submit" name='goal' value="Lookup" />
+          <label style="padding-right:6px;">Study ID:</label>
+          <input style="border-radius: 2px; width:10%; height:30px; margin-right:6px" name='studyId' />
+          <input style="border-radius: 2px; width:20%; height:30px; margin-right:6px;" type="hidden" name="uids" value="${uids}" />
+          <input class="button button-blue btn mt-6" style="height:30px" type="submit" name='goal' value="Lookup" />
         </div>
     </form>
 
@@ -139,8 +139,8 @@
       ${studyTeamTable(studyTeam)}
       ${peopleTable(candidates, 'a')}
       <p>
-        <input class="button button-blue btn mt-6" type="submit" name='goal' value="Add Team Members" />
-        <input class="button button-blue btn mt-6" type="submit" name='goal' value="Add Faculty Sponsor" />
+        <input class="button button-blue btn mt-6" style="height:30px" type="submit" name='goal' value="Add Team Members" />
+        <input class="button button-blue btn mt-6" style="height:30px" type="submit" name='goal' value="Add Faculty Sponsor" />
       </p>
       <input type="hidden" name="uids" value="${uids}" />
       <input py:if="investigator" type="hidden" name="investigator" value="${investigator.cn}" />
@@ -161,7 +161,7 @@
         </dl>
       </div>
 
-      <p><input class="button button-blue btn mt-6" type="submit" name='goal' value="Remove" /></p>
+      <p><input class="button button-blue btn mt-6" style="height:30px" type="submit" name='goal' value="Remove" /></p>
       <input type="hidden" name="uids" value="${uids}" />
       <input py:if="investigator" type="hidden" name="investigator" value="${investigator.cn}" />
     </form>
