--- a/heron_wsgi/templates/build_team.html
+++ b/heron_wsgi/templates/build_team.html
@@ -108,7 +108,7 @@
           <input style="border-radius: 2px; width:20%; height:30px; margin-right:6px;" name='sn' />
           <label style="padding-right:6px;">ID:</label>
           <input style="border-radius: 2px; width:10%; height:30px; margin-right:6px" name='cn' />
-          <input style="height:30px; color: #EEEEEE; width:15%;" type="submit" name='goal' value="Search" />
+          <input style="height:30px; color: #ffffff; width:15%; background-color: #0051ba;" type="submit" name='goal' value="Search" />
         </div>
       </p>
         <div style="display:flex; flex-direction: row; justify-content: left; align-items: left">
@@ -127,7 +127,7 @@
           <label style="padding-right:6px;">Study ID:</label>
           <input style="border-radius: 2px; width:10%; height:30px; margin-right:6px" name='studyId' />
           <input style="border-radius: 2px; width:20%; height:30px; margin-right:6px;" type="hidden" name="uids" value="${uids}" />
-          <input style="height:30px; color: #EEEEEE; width:15%;" type="submit" name='goal' value="Lookup" />
+          <input style="height:30px; color: #ffffff; width:15%; background-color: #0051ba;" type="submit" name='goal' value="Lookup" />
         </div>
     </form>
 
