adjust top padding

--- a/heron_wsgi/templates/build_team.html
+++ b/heron_wsgi/templates/build_team.html
@@ -108,7 +108,7 @@
           <input style="border-radius: 2px; width:20%; height:30px; margin-right:6px;" name='sn' />
           <label style="padding-right:6px;">ID:</label>
           <input style="border-radius: 2px; width:10%; height:30px; margin-right:6px" name='cn' />
-          <input class="button button-blue btn mt-1" style="font-size: 12px; text-align: center; height:32px;" type="submit" name='goal' value="Search" />
+          <input class="button button-blue btn mt-1" style="font-size: 12px; text-align: center; height:30px; padding-top:3px;" type="submit" name='goal' value="Search" />
         </div>
       </p>
         <div style="display:flex; flex-direction: row; justify-content: left; align-items: left">
@@ -127,7 +127,7 @@
           <label style="padding-right:6px;">Study ID:</label>
           <input style="border-radius: 2px; width:10%; height:30px; margin-right:6px" name='studyId' />
           <input style="border-radius: 2px; width:20%; height:30px; margin-right:6px;" type="hidden" name="uids" value="${uids}" />
-          <input class="button button-blue btn mt-1" style="font-size: 12px; text-align: center; height:32px;" type="submit" name='goal' value="Lookup" />
+          <input class="button button-blue btn mt-1" style="font-size: 12px; text-align: center; height:30px; padding-top:3px;" type="submit" name='goal' value="Lookup" />
         </div>
     </form>
 
