Fix for new research informatics website broke links on heron webpage

--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -27,19 +27,19 @@
       <h5>Online Training</h5>
     </div>
 
-    <a class="promo-link" href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron.html" target = "_blank" title ="HERON Introduction"><i class="fas fa-chevron-right"></i>HERON Introduction</a>
+    <a class="promo-link" href="https://www.kumc.edu/research-informatics/heron.html" target = "_blank" title ="HERON Introduction"><i class="fas fa-chevron-right"></i>HERON Introduction</a>
     <br />
-    <a class="promo-link" href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/faqs.html" target = "_blank" title = "HERON FAQ"><i class="fas fa-chevron-right"></i>HERON FAQs</a>
+    <a class="promo-link" href="https://www.kumc.edu/research-informatics/heron/faqs.html" target = "_blank" title = "HERON FAQ"><i class="fas fa-chevron-right"></i>HERON FAQs</a>
     <br />
-    <a class="promo-link" href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/heron-training-videos.html" target = "_blank" title = "HERON training videos"><i class="fas fa-chevron-right"></i>HERON Training Videos</a>
+    <a class="promo-link" href="https://www.youtube.com/user/KUMedicalInformatics/videos" target = "_blank" title = "HERON training videos"><i class="fas fa-chevron-right"></i>HERON Training Videos</a>
     <br />
-    <a class="promo-link" href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/heron-manual.html" target = "_blank" title = "HERON Guide"><i class="fas fa-chevron-right"></i>HERON Guide</a>
+    <a class="promo-link" href="https://www.kumc.edu/documents/research-informatics/HERON%20Guide_20170616.pdf" target = "_blank" title = "HERON Guide"><i class="fas fa-chevron-right"></i>HERON Guide</a>
     <br />
-    <a class="promo-link" href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/requesting-data.html" target = "_blank" title = "Requesting Data"><i class="fas fa-chevron-right"></i>Data Request Process</a>
+    <a class="promo-link" href="https://www.kumc.edu/research-informatics/heron/data-request-process.html" target = "_blank" title = "Requesting Data"><i class="fas fa-chevron-right"></i>Data Request Process</a>
     <br />
-    <a class="promo-link" href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/receiving-data.html" target = "_blank" title = "Receiving Data"><i class="fas fa-chevron-right"></i>Understanding HERON Data</a>
+    <a class="promo-link" href="https://www.kumc.edu/research-informatics/heron/understanding-free-text-notes.html" target = "_blank" title = "Receiving Data"><i class="fas fa-chevron-right"></i>Understanding HERON Data</a>
     <br />
-    <a class="promo-link" href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/frontiers-and-pioneers-registries.html" target = "_blank" title = "Recruitment Registries"><i class="fas fa-chevron-right"></i>Frontiers and Pioneers Participant Recruitment Registry Information</a>
+    <a class="promo-link" href="https://www.kumc.edu/research-informatics/heron/frontiers-and-pioneers-registries.html" target = "_blank" title = "Recruitment Registries"><i class="fas fa-chevron-right"></i>Frontiers and Pioneers Participant Recruitment Registry Information</a>
 
     <div class="header">
       <h5>In-Person Training</h5>
@@ -129,7 +129,7 @@
               </li>
               <li>Receive data on patients in a research study
                 <ul>
-                  <li>Please contact <a href ="mailto:misupport@kumc.edu" target = "_top" title = "email heron-admin">misupport@kumc.edu</a> to learn how to get data elements on a specific list of MRNs</li>
+                  <li>Please contact <a href ="mailto:ocriosupport@kumc.edu" target = "_top" title = "email heron-admin">ocriosupport@kumc.edu</a> to learn how to get data elements on a specific list of MRNs</li>
                 </ul>
               </li>
               <li>Receive contact information for patients in FRONTIERS registry who are eligible for your study </li>
@@ -179,7 +179,7 @@
                 <li>Complete the following form and click submit.</li>
               </ul>
             <p>Sponsorship requests take approximately one week to be approved. Once approved, users can begin searching HERON. More detailed instructions are found on our 
-            <a href = "https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/sponsorship.html" title ="Sponsorship">HERON Training Pages</a>. </p>
+            <a href = "https://www.youtube.com/user/KUMedicalInformatics/videos" title ="Sponsorship">HERON Training Pages</a>. </p>
           </div>
         </div>
       </div>
@@ -201,7 +201,7 @@
               <li>Complete the following form and click submit</li>
             </ol>
             <p>Data requests take approximately two weeks for approval and the release of data to the study team. All individuals needing access to the data must sign the <a href="https://heron.kumc.edu/heron/dua_survey">data use agreement</a> prior to release of data. 
-            More detailed instructions are found on our <a href = "https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/requesting-data.html" target = "_blank" title = "Requesting Data">HERON Training Pages</a>. </p>
+            More detailed instructions are found on our <a href = "https://www.youtube.com/user/KUMedicalInformatics/videos" target = "_blank" title = "Requesting Data">HERON Training Pages</a>. </p>
           </div>
         </div>
       </div>
@@ -226,8 +226,8 @@
               <ul>
                 <li><strong>Introduction to REDCap and HERON: </strong>Beginner Training Clinics Tuesdays 12pm-1pm CST. Click <a href="https://redcap.kumc.edu/surveys/?s=L72oqA%20">here</a> to sign up.<em> This is an introduction for new users or users needing a refresher</em></li>
                 <li><strong>For questions or help with projects:</strong> REDCap &amp; HERON Office Hours, Monday &amp; Wednesday 4pm-5pm CST, Friday 9am-10am CST. Click <a href="https://redcap.kumc.edu/surveys/?s=3DHDJMKN4A">here</a> to sign up.<em> This is not a beginner course; 15-20 min appointment to assist with specific questions</em></li>
-                <li><strong>For support by email:</strong> Contact MI Support at <a href="mailto:misupport@kumc.edu">misupport@kumc.edu</a></li>
-                <li><strong>For project development by MI:</strong> Contact MI Support at <a href="mailto:misupport@kumc.edu">misupport@kumc.edu</a><em> Funding is required</em></li>
+                <li><strong>For support by email:</strong> Contact MI Support at <a href="mailto:ocriosupport@kumc.edu">ocriosupport@kumc.edu</a></li>
+                <li><strong>For project development by MI:</strong> Contact MI Support at <a href="mailto:ocriosupport@kumc.edu">ocriosupport@kumc.edu</a><em> Funding is required</em></li>
               </ul>
             </div>
           </div>
