6862:Fix for new research informatics website broke links on heron webpage (#108)
* Fix for new research informatics website broke links on heron webpage

* facilities and resources updated link

* update production.ini.example for refactor

--- a/heron_wsgi/templates/kumc_layout.xml
+++ b/heron_wsgi/templates/kumc_layout.xml
@@ -51,16 +51,16 @@
                   <a tabindex="0" class="touch-link" aria-haspopup="true" title="Heron Home page" href="https://heron.kumc.edu/heron/">Heron</a>
                 </li>
                 <li class="">
-                  <a tabindex="0" class="touch-link" aria-haspopup="true" title="Our Services at Medical Informatics services" href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services.html">Our Services</a>
+                  <a tabindex="0" class="touch-link" aria-haspopup="true" title="Our Services at Medical Informatics services" href="https://www.kumc.edu/research-informatics/our-services.html">Our Services</a>
                 </li>
                 <li class="">
-                  <a tabindex="0" class="touch-link" aria-haspopup="true" title="Facilities &amp; Resources" href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/facilities-and-resources.html">Facilities &amp; Resources</a>
+                  <a tabindex="0" class="touch-link" aria-haspopup="true" title="Facilities &amp; Resources" href="https://www.kumc.edu/research-informatics/our-services/resources-and-tools.html">Facilities &amp; Resources</a>
                 </li>
                 <li class="">
                   <a tabindex="0" class="touch-link" aria-haspopup="true" title="Frontiers" href="https://www.kufrontiers.org/">Frontiers</a>
                 </li>
                 <li class="">
-                  <a tabindex="0" class="touch-link" aria-haspopup="true" title="About the Medical Informatics division" href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/about/faculty-and-staff.html">About</a>
+                  <a tabindex="0" class="touch-link" aria-haspopup="true" title="About the Medical Informatics division" href="https://www.kumc.edu/research-informatics/about.html">About</a>
                 </li>
               </ul>
             </nav>
@@ -262,7 +262,7 @@
               Student Center, 3001C<br />
               3901 Rainbow Boulevard<br />
               Kansas City KS 66160<br />
-              913-588-7251<br /><a href="mailto:misupport@kumc.edu">misupport@kumc.edu</a>
+              913-588-7251<br /><a href="mailto:ocriosupport@kumc.edu">ocriosupport@kumc.edu</a>
             </p>
           </div>
         </div>
