controlled fa version for icons

--- a/heron_wsgi/templates/heron_layout.xml
+++ b/heron_wsgi/templates/heron_layout.xml
@@ -6,7 +6,8 @@
   <link rel="shortcut icon" href="https://www.kumc.edu/_dev/favicon.ico" />
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Raleway:300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" />
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Anton|Muli:300,400,400italic,300italic|Goudy+Bookletter+1911|Oswald&amp;subset=latin,latin-ext" media="all" />
-  <link rel="stylesheet" type="text/css" href="https://www.kumc.edu/fontawesome/css/all.css" />
+  <link rel="stylesheet" type="text/css" href="assets/fontawesome/css/all.css" />
+  <link rel="stylesheet" href="assets/fontawesome/css/solid.css" />
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Noto+Serif&amp;display=swap" />
   <link rel="stylesheet" type="text/css" href="https://www.kumc.edu/Content/css/bootstrap.min.css" />
   <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/dataTables.bootstrap5.min.css" />
@@ -229,7 +230,7 @@
         <div class="news-copy">
           <div class="x-up-card">
             <div class="parent-section-link">
-              <a href="https://heron.kumc.edu/heron/" style="font-weight: bolder;"><i class="fas fa-arrow-left"></i> Heron </a>
+              <a href="https://heron.kumc.edu/heron/" style="font-weight: bolder;"><i class="fa-arrow-left"></i> Heron </a>
             </div>
             <div class="content">
                 ${select(".//div[@class='news-copy']/*|text()")}
@@ -273,7 +274,7 @@
         <div class="col-10 col-md-6">
           <ul class="newsroom-links">
             <li><a href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics.html" target="_blank" title="Medical Informatics Division">
-              Medical Informatics Division&nbsp;<i class="fas fa-chevron-right"></i></a>
+              Medical Informatics Division&nbsp;<i class="fa-chevron-right"></i></a>
             </li>
           </ul>
         </div>
@@ -292,7 +293,7 @@
           <div class="col-12">
             <div class="center-content">
               <a class="button button-outline button-outline--gift" href="https://www.kumc.edu/about/make-a-gift.html">
-              <img src="https://www.kumc.edu/Content/img/logos/logo--endowment.png" role="presentation" alt="" />Make a Gift<i class="fas fa-chevron-right"></i></a>
+              <img src="https://www.kumc.edu/Content/img/logos/logo--endowment.png" role="presentation" alt="" />Make a Gift<i class="fa-chevron-right"></i></a>
             </div>
             <div class="center-content">
               <a class="logo logo--footer" href="https://www.kumc.edu/" target="_blank">
