--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <div py:if="'checked' in repositoryAccess">
-      <a  class="promo-link" style="font-weight: bolder; color: #e8000d;" href="${i2b2_login_path}"><i class="fa-hourglass-start" style="color: #0051ba;"></i>Start HERON Search</a>
+      <a  class="promo-link" style="font-weight: bolder; color: #e8000d;" href="${i2b2_login_path}"><i class="fa-solid fa-hourglass-start" style="color: #0051ba;"></i>Start HERON Search</a>
     </div>
     
     <div py:if="'checked' not in repositoryAccess">
@@ -27,57 +27,57 @@
       <h5>Online Training</h5>
     </div>
 
-    <a class="promo-link" href="https://www.kumc.edu/research-informatics/heron.html" target = "_blank" title ="HERON Introduction"><i class="fa-chevron-right"></i>HERON Introduction</a>
+    <a class="promo-link" href="https://www.kumc.edu/research-informatics/heron.html" target = "_blank" title ="HERON Introduction"><i class="fa-solid fa-chevron-right"></i>HERON Introduction</a>
     <br />
-    <a class="promo-link" href="https://www.kumc.edu/research-informatics/heron/faqs.html" target = "_blank" title = "HERON FAQ"><i class="fa-chevron-right"></i>HERON FAQs</a>
+    <a class="promo-link" href="https://www.kumc.edu/research-informatics/heron/faqs.html" target = "_blank" title = "HERON FAQ"><i class="fa-solid fa-chevron-right"></i>HERON FAQs</a>
     <br />
-    <a class="promo-link" href="https://www.youtube.com/user/KUMedicalInformatics/videos" target = "_blank" title = "HERON training videos"><i class="fa-chevron-right"></i>HERON Training Videos</a>
+    <a class="promo-link" href="https://www.youtube.com/user/KUMedicalInformatics/videos" target = "_blank" title = "HERON training videos"><i class="fa-solid fa-chevron-right"></i>HERON Training Videos</a>
     <br />
-    <a class="promo-link" href="https://www.kumc.edu/documents/research-informatics/HERON%20Guide_20170616.pdf" target = "_blank" title = "HERON Guide"><i class="fa-chevron-right"></i>HERON Guide</a>
+    <a class="promo-link" href="https://www.kumc.edu/documents/research-informatics/HERON%20Guide_20170616.pdf" target = "_blank" title = "HERON Guide"><i class="fa-solid fa-chevron-right"></i>HERON Guide</a>
     <br />
-    <a class="promo-link" href="https://www.kumc.edu/research-informatics/heron/data-request-process.html" target = "_blank" title = "Requesting Data"><i class="fa-chevron-right"></i>Data Request Process</a>
+    <a class="promo-link" href="https://www.kumc.edu/research-informatics/heron/data-request-process.html" target = "_blank" title = "Requesting Data"><i class="fa-solid fa-chevron-right"></i>Data Request Process</a>
     <br />
-    <a class="promo-link" href="https://www.kumc.edu/research-informatics/heron/understanding-free-text-notes.html" target = "_blank" title = "Receiving Data"><i class="fa-chevron-right"></i>Understanding HERON Data</a>
+    <a class="promo-link" href="https://www.kumc.edu/research-informatics/heron/understanding-free-text-notes.html" target = "_blank" title = "Receiving Data"><i class="fa-solid fa-chevron-right"></i>Understanding HERON Data</a>
     <br />
-    <a class="promo-link" href="https://www.kumc.edu/research-informatics/heron/frontiers-and-pioneers-registries.html" target = "_blank" title = "Recruitment Registries"><i class="fa-chevron-right"></i>Frontiers and Pioneers Participant Recruitment Registry Information</a>
+    <a class="promo-link" href="https://www.kumc.edu/research-informatics/heron/frontiers-and-pioneers-registries.html" target = "_blank" title = "Recruitment Registries"><i class="fa-solid fa-chevron-right"></i>Frontiers and Pioneers Participant Recruitment Registry Information</a>
 
     <div class="header">
       <h5>In-Person Training</h5>
     </div>
 
-    <a class="promo-link" href="https://redcap.kumc.edu/surveys/?s=L72oqA" target = "_blank" ><i class="fa-chevron-right"></i>Lunch and Learn Clinic</a>
+    <a class="promo-link" href="https://redcap.kumc.edu/surveys/?s=L72oqA" target = "_blank" ><i class="fa-solid fa-chevron-right"></i>Lunch and Learn Clinic</a>
     <br />
-    <a class="promo-link" href="https://redcap.kumc.edu/surveys/?s=3DHDJMKN4A" target = "_blank"><i class="fa-chevron-right"></i>Office Hours</a>
+    <a class="promo-link" href="https://redcap.kumc.edu/surveys/?s=3DHDJMKN4A" target = "_blank"><i class="fa-solid fa-chevron-right"></i>Office Hours</a>
 
     <div class="header">
       <h5>Regulatory Requests</h5>
     </div>
 
-    <a class="promo-link" href="${sponsorship_path}"><i class="fa-chevron-right"></i>HERON Sponsorship Request</a>
+    <a class="promo-link" href="${sponsorship_path}"><i class="fa-solid fa-chevron-right"></i>HERON Sponsorship Request</a>
     <br />
-    <a class="promo-link" href="${data_use_path}"><i class="fa-chevron-right"></i>HERON Data Use or Recruitment Request</a>
+    <a class="promo-link" href="${data_use_path}"><i class="fa-solid fa-chevron-right"></i>HERON Data Use or Recruitment Request</a>
     <br />
-    <a class="promo-link" href="${greenheron_use_path}"><i class="fa-chevron-right"></i>Green HERON Sponsorship or Data Use Request</a>
+    <a class="promo-link" href="${greenheron_use_path}"><i class="fa-solid fa-chevron-right"></i>Green HERON Sponsorship or Data Use Request</a>
     <br />
 
     <div py:if="droc">
       <div class="header">
         <h5>Oversight</h5>
       </div>
-        <a class="promo-link" href="https://redcap.kumc.edu/redcap_v4.7.0/index.php?pid=238"><i class="fa-chevron-right"></i>DROC Review Forms</a>
+        <a class="promo-link" href="https://redcap.kumc.edu/redcap_v4.7.0/index.php?pid=238"><i class="fa-solid fa-chevron-right"></i>DROC Review Forms</a>
         <br />
-        <a class="promo-link" href="reports/usage_small"><i class="fa-chevron-right"></i>Usage Audit Report</a>
+        <a class="promo-link" href="reports/usage_small"><i class="fa-solid fa-chevron-right"></i>Usage Audit Report</a>
     </div>
     
     <div class="header">
       <h5>Other Tools</h5>
     </div>
     
-    <a class="promo-link" href="reports/usage"><i class="fa-chevron-right"></i>HERON Usage Report</a>
+    <a class="promo-link" href="reports/usage"><i class="fa-solid fa-chevron-right"></i>HERON Usage Report</a>
     <br />
-    <a class="promo-link" href="reports/performance"><i class="fa-chevron-right"></i>Current HERON Users and Recent Query Performance</a>
+    <a class="promo-link" href="reports/performance"><i class="fa-solid fa-chevron-right"></i>Current HERON Users and Recent Query Performance</a>
     <br />
-    <a class="promo-link" href="https://redcap.kumc.edu/" target = "_blank" title = "REDCap"><i class="fa-chevron-right"></i>REDCap</a>
+    <a class="promo-link" href="https://redcap.kumc.edu/" target = "_blank" title = "REDCap"><i class="fa-solid fa-chevron-right"></i>REDCap</a>
     
   </div>
 
