--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <div py:if="'checked' in repositoryAccess">
-      <a  class="promo-link" style="font-weight: bolder; color: #e8000d;" href="${i2b2_login_path}"><i class="fa-solid fa-hourglass-start" style="color: #0051ba;"></i>Start HERON Search</a>
+      <a  class="promo-link" style="font-weight: bolder; color: #e8000d;" href="${i2b2_login_path}"><i class="fa-solid fa-folder-tree" style="color: #0051ba;"></i>Start HERON Search</a>
     </div>
     
     <div py:if="'checked' not in repositoryAccess">
