--- a/heron_wsgi/templates/heron_layout.xml
+++ b/heron_wsgi/templates/heron_layout.xml
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Anton|Muli:300,400,400italic,300italic|Goudy+Bookletter+1911|Oswald&amp;subset=latin,latin-ext" media="all" />
   <link rel="stylesheet" type="text/css" href="assets/fontawesome/css/all.css" />
   <link rel="stylesheet" href="assets/fontawesome/css/solid.css" />
+  <link rel="stylesheet" href="assets/fontawesome/css/brands.css" />
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Noto+Serif&amp;display=swap" />
   <link rel="stylesheet" type="text/css" href="https://www.kumc.edu/Content/css/bootstrap.min.css" />
   <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/dataTables.bootstrap5.min.css" />
