--- a/heron_wsgi/templates/heron_layout.xml
+++ b/heron_wsgi/templates/heron_layout.xml
@@ -6,9 +6,9 @@
   <link rel="shortcut icon" href="https://www.kumc.edu/_dev/favicon.ico" />
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Raleway:300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" />
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Anton|Muli:300,400,400italic,300italic|Goudy+Bookletter+1911|Oswald&amp;subset=latin,latin-ext" media="all" />
-  <link rel="stylesheet" type="text/css" href="assets/fontawesome/css/all.css" />
-  <link rel="stylesheet" href="assets/fontawesome/css/solid.css" />
-  <link rel="stylesheet" href="assets/fontawesome/css/brands.css" />
+  <link rel="stylesheet" type="text/css" href="./assets/fontawesome/css/all.css" />
+  <link rel="stylesheet" href="./assets/fontawesome/css/solid.css" />
+  <link rel="stylesheet" href="./assets/fontawesome/css/brands.css" />
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Noto+Serif&amp;display=swap" />
   <link rel="stylesheet" type="text/css" href="https://www.kumc.edu/Content/css/bootstrap.min.css" />
   <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/dataTables.bootstrap5.min.css" />
