add data request status link on heron front page

--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -78,6 +78,8 @@
     <a class="promo-link" href="reports/performance"><i class="fas fa-chevron-right"></i>Current HERON Users and Recent Query Performance</a>
     <br />
     <a class="promo-link" href="https://redcap.kumc.edu/" target = "_blank" title = "REDCap"><i class="fas fa-chevron-right"></i>REDCap</a>
+    <br />
+    <a class="promo-link" href="https://redcap.kumc.edu/surveys/?__report=834PX3NX4W7XAK8W" target = "_blank" title = "Data Request Status"><i class="fa-solid fa-chevron-right"></i>REDCap</a>
     
   </div>
 
