use fas style class

--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -79,8 +79,7 @@
     <br />
     <a class="promo-link" href="https://redcap.kumc.edu/" target = "_blank" title = "REDCap"><i class="fas fa-chevron-right"></i>REDCap</a>
     <br />
-    <a class="promo-link" href="https://redcap.kumc.edu/surveys/?__report=834PX3NX4W7XAK8W" target = "_blank" title = "Data Request Status"><i class="fa-solid fa-chevron-right"></i>Data Request Status</a>
-
+    <a class="promo-link" href="https://redcap.kumc.edu/surveys/?__report=834PX3NX4W7XAK8W" target = "_blank" title = "Data Request Status"><i class="fas fa-chevron-right"></i>Data Request Status</a>
   </div>
 
   <div class="col-12 col-md-6">
