fixed publication link

--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -218,7 +218,7 @@
             <ul>
               <li>KUMC participates in the <a href = "https://www.gpcnetwork.org/" target = "_blank"> Greater Plains Collaborative (GPC) </a> which is a network of 12 leading medical centers in 8 states. The network brings together data on over 16 million patients. Investigators from KUMC are able to request data from participating sites. </li>
               <li>Patient recruitment is possible through the <a href = "https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/frontiers-and-pioneers-registries.html" target = "_blank" title = "Recruitment Registries"> Frontiers and Pioneers Research Registries</a>.</li>
-              <li>HERON data has been cited in several <a href="http://frontiersresearch.org/frontiers/node/452" target = "blank">publications</a>.</li>
+              <li>HERON data has been cited in several <a href="https://redcap.kumc.edu/surveys/?__report=XKNJ4EWKMF9WTPF7" target = "blank">publications</a>.</li>
               <li>HERON is supported in part by funds from CTSA Award #UL1TR000001 and Patient-Centered Outcomes Research Institute (PCORI) Program Award #CDRN-1306-04631.</li>
             </ul>
           
