--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -53,9 +53,9 @@
       <h5>Regulatory Requests</h5>
     </div>
 
-    <a class="promo-link" href="${sponsorship_path}"><i class="fas fa-chevron-right"></i>HERON Sponsorship Request</a>
+    <a class="promo-link" href="https://kumc.service-now.com/now/nav/ui/classic/params/target/com.glideapp.servicecatalog_cat_item_view.do%3Fv%3D1%26sysparm_id%3Dc27a1b091b819290bfa1c80b234bcb6d%26sysparm_link_parent%3De15706fc0a0a0aa7007fc21e1ab70c2f%26sysparm_catalog%3De0d08b13c3330100c8b837659bba8fb4%26sysparm_catalog_view%3Dcatalog_default"><i class="fas fa-chevron-right"></i>HERON Sponsorship Request</a>
     <br />
-    <a class="promo-link" href="${data_use_path}"><i class="fas fa-chevron-right"></i>HERON Data Use or Recruitment Request</a>
+    <a class="promo-link" href="https://kumc.service-now.com/now/nav/ui/classic/params/target/com.glideapp.servicecatalog_cat_item_view.do%3Fv%3D1%26sysparm_id%3Dc27a1b091b819290bfa1c80b234bcb6d%26sysparm_link_parent%3De15706fc0a0a0aa7007fc21e1ab70c2f%26sysparm_catalog%3De0d08b13c3330100c8b837659bba8fb4%26sysparm_catalog_view%3Dcatalog_default"><i class="fas fa-chevron-right"></i>HERON Data Use or Recruitment Request</a>
     <br />
     <a class="promo-link" href="${greenheron_use_path}"><i class="fas fa-chevron-right"></i>Green HERON Sponsorship or Data Use Request</a>
     <br />
