Data use agreement removal and Medical Informatics to Research informatics

--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -340,7 +340,7 @@
       <h5>Data Use Agreement</h5>
     </div>
 
-    <p>The <a href="${dua_path}" target="_blank">HERON Data Use Agreement</a> must be signed by all study team members before extracted data can be released.</p>
+    <p>The HERON Data Use Agreement must be signed by all study team members before extracted data can be released.</p>
 
     <div class="header">
       <h5>Problems? Questions? Ideas?</h5>
